--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -4,10 +4,10 @@
   <div class="col-md-6">
 
     <div class="content-center-align">
-      <h2>{{playerOne.name}}</h2>
-      <p><label>Life </label> {{playerOne.life}}</p>
-      <p><label>Wins </label> {{playerOne.wins}}</p>
-      <p><label>Defeats </label> {{playerOne.defeats}}</p>
+      <h2>{{playerOneIni.name}}</h2>
+      <p><label>Life </label> {{playerOneIni.life}}</p>
+      <p><label>Wins </label> {{playerOneIni.wins}}</p>
+      <p><label>Defeats </label> {{playerOneIni.defeats}}</p>
     </div>
       
 
@@ -17,10 +17,10 @@
   <div class="col-md-6">
 
       <div class="content-center-align">
-          <h2>{{playerTwo.name}}</h2>
-          <p><label>Life </label> {{playerTwo.life}}</p>
-          <p><label>Wins </label> {{playerTwo.wins}}</p>
-          <p><label>Defeats </label> {{playerTwo.defeats}}</p>
+          <h2>{{playerTwoIni.name}}</h2>
+          <p><label>Life </label> {{playerTwoIni.life}}</p>
+          <p><label>Wins </label> {{playerTwoIni.wins}}</p>
+          <p><label>Defeats </label> {{playerTwoIni.defeats}}</p>
         </div>
 
   
