--- a/src/app/components/game-screen/game-screen.component.html
+++ b/src/app/components/game-screen/game-screen.component.html
@@ -1,31 +1,40 @@
 
+
+<div *ngIf="showGameScreen">
 <app-player [playerOne]="playerOne" [playerTwo]="playerTwo"></app-player>
 
-<div class="row">
+            <div class="row">
 
-    <div class="col-md-6 content-center-align">
+            <div class="col-md-6 content-center-align">
 
-          <app-button-player [data]="playerOne" (event)="makeAction($event)"></app-button-player>
-  
-    </div>
-  
-    <div class="col-md-6 content-center-align">
-  
-          <app-button-player [data]="playerTwo" (event)="makeAction($event)"></app-button-player>
-  
-    </div>                
-  
-    
-</div>   
- 
-<div class="content-center-align">
-      
-      <app-button-player [data]="restart" (event)="makeAction($event)"></app-button-player>
-
-</div> 
-
+                  <app-button-player [data]="playerOne" (event)="makeAction($event)"></app-button-player>
+            
+            </div>
+            
+            <div class="col-md-6 content-center-align">
+            
+                  <app-button-player [data]="playerTwo" (event)="makeAction($event)"></app-button-player>
+            
+            </div>                
+            
+            
+            </div>   
+            
+</div>
 <div *ngIf="winner" class="content-center-align">
       
-      <h1>{{winner}}</h1>
+            <h1>{{winner}}</h1>
+      
 
-</div>
+
+      </div>
+
+      <app-button-player  *ngIf="gameStart" [data]="'Restart'" (event)="makeAction($event)"></app-button-player>
+
+
+<div *ngIf="!gameStart" class="content-center-align">
+      
+     
+      <app-button-player [data]="'Start'" (event)="makeAction($event)"></app-button-player>
+</div> 
+
