Update structure and components project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div class="jumbotron">
-  <div class="content-center-align">
-
-  <h1>
-    S2 IT - Desafio
-  </h1>
- 
+<div class="container">
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
-<app-game-screen></app-game-screen>
-</div>
+
