Update game component functionalities

--- a/src/app/components/flow-control-button/flow-control-button.component.html
+++ b/src/app/components/flow-control-button/flow-control-button.component.html
@@ -1,2 +1,2 @@
 
-<button type="button" class="btn btn-danger" (click)="restart(gameStatus)">{{buttonLabel}}</button>
+<button type="button" [class]="setStyle(status,winner)" (click)="action(status)" >{{buttonLabel}}</button>
