--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -6,7 +6,7 @@
                 <span>HP</span> {{player.hp}}% |
                 <label>Wins </label> {{player.wins}} |
                 <label>Defeats </label> {{player.defeats}} 
-                <img class="player-kanban" [src]="setImage(player.hp)" alt="Game logo">
+                <img class="player-kanban" [src]="player.image" alt="Game logo">
         </div>  
     </div>
       
