--- a/src/app/components/pre-game/pre-game.component.html
+++ b/src/app/components/pre-game/pre-game.component.html
@@ -1,8 +1,8 @@
     <img  [class]="logoImage.style" [src]="logoImage.image" alt="Game logo">
+
     <ul>
-        <li class="font-list-big"><a (click)="startGame()">{{buttonStartLabel}}</a></li>
-        <hr>
-        <li><a (click)="showDialog()">{{buttonInstructionsLabel}}</a></li>
+        <li><p><app-flow-control-button [status]="gameStatus" (event)="goGame($event)"></app-flow-control-button></p></li>
+        <li><a (click)="showHowToPlay()">{{buttonInstructionsLabel}}</a></li>
         <li><a (click)="showScores()">{{buttonScoresLabel}}</a></li>
     </ul>
 
