--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -4,12 +4,18 @@
         <div class="row">
                     <div class="col-md-6">                      
                             <app-player [player]="playerOne"></app-player>
-                            <app-damage-button [player]="playerTwo" (event)="finishGame($event)"></app-damage-button>
+                            <app-damage-button [player]="playerTwo" [status]="gameStatus" (event)="endGame($event)"></app-damage-button>
                     </div>
                     <div class="col-md-6">
                             <app-player [player]="playerTwo"></app-player>
-                            <app-damage-button [player]="playerOne" (event)="finishGame($event)"></app-damage-button>
+                            <app-damage-button [player]="playerOne" [status]="gameStatus" (event)="endGame($event)"></app-damage-button>
                     </div>                
-        </div>   
+        </div>  
+        <app-flow-control-button [status]="gameStatus" [winner]="winner" (event)="restartGame($event)"></app-flow-control-button> 
+        <p class="links">
+            <a (click)="quitGame()">{{buttonQuit}}</a>
+        </p>
     </div>
+
   </div>
+
