Update code improvement and Remove unused content

--- a/src/app/components/flow-control-button/flow-control-button.component.html
+++ b/src/app/components/flow-control-button/flow-control-button.component.html
@@ -1,2 +1,2 @@
 
-<button type="button" [class]="setStyle(status,winner)" (click)="action(status)" >{{buttonLabel}}</button>
+<button type="button" [class]="setStyle(gameStarted,winner)" (click)="action(gameStarted)" >{{btnLabel}}</button>
