--- a/src/app/components/how-to-play/how-to-play.component.html
+++ b/src/app/components/how-to-play/how-to-play.component.html
@@ -1,23 +1,26 @@
-<div class="container">
+  <div class="container">
 
-    <div class="main">
-      <h1>How to Play</h1>
-      <hr>
-          <p>
-           In this game two players will battle to fill in enemy´s kanban.
-           To do it, each player has an "Attack" button to clue postits in the opiste´s kanban. Win who make this faster! 
-           You can also use the keyboard keys "S" for Player 1 and "L" for Player 2 to make damage!</p>
-           <b>Have Fun!</b>
+      <div class="main">
 
+          <h1>How to Play</h1>
 
+          <hr>
+              <p>
+                In this game two players will battle to fill in enemy´s kanban.
+                To do it, each player has an "Attack" button to clue postits in the opiste´s kanban. Win who make this faster! 
+                You can also use the keyboard keys "S" for Player 1 and "L" for Player 2 to make damage!
+              </p>
+              <b>
+                Have Fun!
+              </b>
 
-      <hr>
-      <div>                  
-          <button type="button" class="btn btn-primary" (click)="back()">Back</button>
-                   
-      </div>      
-    </div>
-  
+          <hr>
+          
+          <div>                  
+              <button type="button" class="btn btn-primary" (click)="back()">{{btnBack}}</button>   
+          </div>
+
+      </div>
   </div>
   
   
