--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -1,12 +1,10 @@
-
-
     <div>
         <h2>{{player.name}}</h2>  
         <div>
                 <span>HP</span> {{player.hp}}% |
                 <label>Wins </label> {{player.wins}} |
                 <label>Defeats </label> {{player.defeats}} 
-                <img class="player-kanban" [src]="player.image" alt="Game logo">
+                <img class="player-kanban" [src]="player.image" alt="Kanban">
         </div>  
     </div>
       
