--- a/src/app/components/damage-button/damage-button.component.html
+++ b/src/app/components/damage-button/damage-button.component.html
@@ -1,2 +1,2 @@
 
-<button type="button" class="btn btn-primary" (click)="damage(player)">{{buttonLabel}}</button>
+<button type="button" class="btn btn-primary" (click)="damage(player)">{{btnLabel}}</button>
